--- a/css.css
+++ b/css.css
@@ -24,4 +24,56 @@
   --breakpoint_desktop: 1440px;
   /* анимация*/
   --transition_base: 0.4s ease;
+  /* из видео*/
+  --main-bg-color: #f4f4f4;
+  --main-text-color: #333333;
+  --container-width: 90%;
+  --header-bg: #333;
+  --header-txt: #fff;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+  font: 14px/1.3 var(--font_family_default);
+  background-color: var(--main-bg-color);
+  color: var(--main-text-color);
+}
+
+.container {
+  width: var(--container-width);
+  margin: 20px auto;
+}
+
+#main-header {
+  background-color: var(--header-bg);
+  color: var(--header-txt);
+}
+
+.box {
+  --box-bg: #ddd;
+  --box-main-color: #06c;
+  --box-padding: 1em 1.5em;
+
+  background-color: var(--box-bg);
+  padding: var(--box-padding);
+  margin-bottom: 2em;
+  border: 1px solid var(--box-main-color);
+  box-shadow: 10px 5px 5px var(--box-main-color);
+}
+
+.box h2 {
+  color: var(--box-main-color);
+}
+
+@media screen and (min-width: 1440px) {
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 2em;
+  }
+
+  .box {
+    margin-bottom: 0;
+  }
 }
