--- a/main.css
+++ b/main.css
@@ -24,12 +24,6 @@
   --breakpoint_desktop: 1440px;
   /* анимация*/
   --transition_base: 0.4s ease;
-  /* из видео*/
-  --main-bg-color: #f4f4f4;
-  --main-text-color: #333333;
-  --container-width: 90%;
-  --header-bg: #333;
-  --header-txt: #fff;
 }
 
 body {
@@ -38,35 +32,6 @@ body {
   font: 14px/1.3 var(--font_family_default);
   background-color: var(--main-bg-color);
   color: var(--main-text-color);
-}
-
-.container {
-  width: var(--container-width);
-  margin: 20px auto;
-}
-
-#main-header {
-  background-color: var(--header-bg);
-  color: var(--header-txt);
-}
-
-.box {
-  --box-bg: #ddd;
-  --box-main-color: #06c;
-  --box-padding: 1em 1.5em;
-  --box-shadow-offset-x: 10px;
-  --box-shadow-offset-y: 5px;
-  --box-shadow-blur-radius: 5px;
-
-  background-color: var(--box-bg);
-  padding: var(--box-padding);
-  margin-bottom: 2em;
-  border: 1px solid var(--box-main-color);
-  box-shadow: var(--box-shadow-offset-x) var(--box-shadow-offset-y) var(--box-shadow-blur-radius) var(--box-main-color);
-}
-
-.box h2 {
-  color: var(--box-main-color);
 }
 
 @media screen and (min-width: 1440px) {
@@ -81,3 +46,45 @@ body {
     margin-bottom: 0;
   }
 }
+
+.box {
+  -webkit-box-shadow: 10px 5px 5px black;
+  -moz-box-shadow: 10px 5px 5px black;
+  --box-shadow: 10px 5px 5px black;
+}
+
+:root {
+  --gutter: 4px;
+  --primary-color: red;
+  --logo-text: var(--primary-color);
+}
+
+section {
+  margin: var(--gutter);
+}
+
+@media (min-width: 600px) {
+  :root {
+    --gutter: 16px;
+  }
+}
+
+.foo {
+  --side: margin-top;
+  var(--side): 20px;
+}
+
+.foo {
+  --gap: 20;
+  margin-top: var(--gap)px; /* the calc() function.*/
+  margin-top: calc(var(--gap) * 1px); /* niiiiice */
+}
+
+.box{
+  /* The --main-padding variable is used if --box-padding is not defined. */
+  padding: var(--box-padding, var(--main-padding));
+  --box-text: 'This is my box';
+  /* Equal to --box-highlight-text:'This is my box with highlight'; */
+  --box-highlight-text: var(--box-text)' with highlight';
+}
+
